tests/negative/typecheck/typeclass_ord.orng
// typeclass_ord.orng:8:8: error: the type `Bool` does not contain the member `lt`
//     x < y
//       ^
// 
fn main() -> Bool {
    let x = true
    let y = false
    x < y
}